--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "start": "bun run src/index.ts",
+    "test": "bun test"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/ws": "^8.18.1"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "@polymarket/clob-client": "^4.22.0"
+    "@polymarket/clob-client": "^4.22.0",
+    "@polymarket/real-time-data-client": "^1.4.0",
+    "date-fns-tz": "^3.2.0",
+    "socket.io-client": "^4.8.1",
+    "tslib": "^2.8.1",
+    "viem": "^2.37.11",
+    "ws": "^8.18.3"
   }
 }
