--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "bun run src/index.ts",
+    "start": "bun run src/strategy.ts",
     "test": "bun test"
   },
   "devDependencies": {
@@ -19,8 +19,8 @@
     "@polymarket/real-time-data-client": "^1.4.0",
     "date-fns-tz": "^3.2.0",
     "socket.io-client": "^4.8.1",
+    "terminal-size": "^4.0.0",
     "tslib": "^2.8.1",
-    "viem": "^2.38.0",
     "ws": "^8.18.3"
   }
 }
